# ARCADIA

./: .gitignore  LICENSE
clients/: pilotageManuel.py  testpub.py
ihm/: simple.py
modele/: commun.proto  etat.proto  generer.sh  ordre.proto
ressources/: boules.xcf  fond.xcf
simulateur/: CMakeLists.txt
simulateur/include/communication/: ComManager.h
simulateur/include/modele/: Entite.h  Jeu.h  Robot.h  Tresor.h  params.h
simulateur/src/: arena.cpp
simulateur/src/communication/: ComManager.cpp
simulateur/src/modele/: Entite.cpp  Jeu.cpp  Robot.cpp  Tresor.cpp
